changes in doc
