# docs/swagger.yaml
@@ -244,7 +244,7 @@ paths:
             type: string
       summary: get projects by user
       tags:
-      - user
+      - project
     post:
       consumes:
       - application/json
@@ -282,7 +282,7 @@ paths:
             type: string
       summary: Create project
       tags:
-      - user
+      - project
     put:
       consumes:
       - application/json
@@ -316,7 +316,7 @@ paths:
             type: string
       summary: update project
       tags:
-      - user
+      - project
   /project/{project_id}/task:
     get:
       description: get all tasks from recieved project id
@@ -352,7 +352,7 @@ paths:
             type: string
       summary: get tasks by project
       tags:
-      - user
+      - project
   /refresh:
     post:
       consumes:
@@ -414,7 +414,7 @@ paths:
             type: string
       summary: get tasks by user
       tags:
-      - user
+      - task
     post:
       consumes:
       - application/json
@@ -452,7 +452,7 @@ paths:
             type: string
       summary: create a task
       tags:
-      - user
+      - task
     put:
       consumes:
       - application/json
@@ -490,7 +490,7 @@ paths:
             type: string
       summary: update task
       tags:
-      - user
+      - task
   /team:
     post:
       consumes:
@@ -597,7 +597,7 @@ paths:
             type: string
       summary: Get team members
       tags:
-      - user
+      - team
   /team/user:
     post:
       consumes:
@@ -636,7 +636,7 @@ paths:
             type: string
       summary: Add user
       tags:
-      - user
+      - team
   /user:
     post:
       consumes:
